# jarvis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  jarvis_app.py  mypy.ini  onboarding.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/jarvis-ai-assistant/: .config.kiro  design.md  requirements.md  tasks.md
benchmarks/: __init__.py  voice_pipeline.py  wake_word.py
docs/: architecture.md  plugins.md  setup.md  troubleshooting.md
installer/: build.ps1  generate_banners.py  generate_icon.py  jarvis.spec  jarvis_setup.iss  release_notes.md  release_notes_1.0.1.md  release_notes_1.0.2.md  release_notes_1.0.3.md  release_notes_1.0.4.md
src/jarvis/: __init__.py  __main__.py  app.py  diagnostics.py  update_checker.py
src/jarvis/automation/: __init__.py  platform.py  scripts.py  windows_adapter.py
src/jarvis/config/: __init__.py  default.toml  schema.py
src/jarvis/dialog/: conversation_state.py  fallback_notice.py  manager.py  persona.py  persona_guard.py
src/jarvis/llm/: base.py  mistral_backend.py  mistral_schema.py  ollama_backend.py  selector.py
src/jarvis/memory/: compactor.py  embedder.py  redactor.py  store.py
src/jarvis/reminders/: notifier.py  service.py
src/jarvis/security/: audit_log.py  authorization.py  credential_store.py  dpapi.py  log_redaction.py
src/jarvis/skills/: base.py  mcp_adapter.py  registry.py
src/jarvis/utils/: time_source.py
src/jarvis/voice/: audio_io.py  vad.py  wake_word.py
tests/: conftest.py  strategies.py
tests/fakes/: conftest.py  fake_mcp_server.py  fake_mistral_server.py  fake_platform.py
tests/integration/: test_dialog_manager_flow.py  test_fake_mcp_server.py  test_fake_mistral_server.py  test_mcp_integration.py  test_reminder_persistence.py
tests/property/: test_property_01_tool_call_round_trip.py  test_property_02_schema_validation_soundness.py  test_property_03_memory_retrieval_determinism.py  test_property_04_forget_removes_record.py  test_property_05_conversation_state_determinism.py  test_property_06_authorization_audit_precedence.py  test_property_07_skill_failure_isolation.py  test_property_08_credential_confidentiality.py  test_property_09_path_sandbox_soundness.py  test_property_10_reminder_firing_order.py  test_property_11_persona_invariance.py  test_property_12_mistral_function_def_conformance.py  test_property_13_stt_low_confidence_gating.py  test_property_14_backend_fallback_equivalence.py  test_property_15_memory_redaction_containment.py
tests/unit/: test_app.py  test_benchmark_wake_word.py  test_diagnostics.py  test_strategies.py  test_time_source.py
tests/unit/automation/: test_platform.py  test_scripts.py  test_windows_adapter.py
tests/unit/config/: __init__.py  test_loader.py  test_schema.py
tests/unit/dialog/: test_conversation_state.py  test_fallback_notice.py  test_manager.py  test_persona.py  test_persona_guard.py
tests/unit/fakes/: conftest.py  test_fake_platform.py
tests/unit/llm/: test_backend_selector.py  test_mistral_backend.py  test_mistral_schema.py
tests/unit/memory/: test_compactor.py  test_embedder.py  test_redactor.py
tests/unit/security/: test_audit_log.py  test_authorization.py  test_credential_store.py  test_dpapi.py  test_log_redaction.py
(+66 files in other folders)
