[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "1.0.1"
description = "JARVIS — an asynchronous, voice-first AI assistant powered by Mistral AI with an extensible Skill plugin system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "JARVIS Contributors" },
]
keywords = ["assistant", "voice", "mistral", "automation", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies
# Notes:
#  * `tomllib` is part of the standard library on Python >=3.11, so no `tomli` shim is required.
#  * Windows-only packages are guarded with `sys_platform == "win32"` markers so the package
#    can still be installed (with reduced capability) on Linux/macOS CI runners. The
#    `WindowsAdapter` is the only consumer of those modules.
dependencies = [
    # LLM backends
    "mistralai>=1.0.0",
    "ollama>=0.3.0",

    # Voice pipeline
    "pvporcupine>=3.0.0",
    "silero-vad>=5.1",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",

    # Memory / embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",

    # Reminders / persistence
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",

    # Document parsing
    "pypdf>=4.0",
    "python-docx>=1.1",

    # Networking and resilience
    "httpx>=0.27",
    "tenacity>=8.2",

    # Tool / skill ecosystem
    "mcp>=1.0.0",

    # Configuration, validation and schema
    "pydantic>=2.6",
    "jsonschema>=4.21",

    # General utilities
    "python-dateutil>=2.9",
    "keyring>=24.3",

    # Windows-only platform integration
    "pywin32>=306; sys_platform == 'win32'",
    "wmi>=1.5.1; sys_platform == 'win32'",
    "pycaw>=20240210; sys_platform == 'win32'",
    "pyautogui>=0.9.54; sys_platform == 'win32'",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "win10toast>=0.9; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Optional cloud TTS providers (selected via config); not required for the local-only path.
cloud-tts = [
    "openai>=1.30",
]

# Development, lint, type-check and test tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "hypothesis-jsonschema>=0.23",
    "freezegun>=1.4",
    "aiohttp>=3.9",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.4",
]

[project.scripts]
jarvis = "jarvis.app:main"

[project.urls]
Homepage = "https://example.invalid/jarvis"
Issues = "https://example.invalid/jarvis/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["py.typed", "config/default.toml"]
